Improved default values in Edit New File and View File dialogs

Use current file name as a selected default in the dialogs.
This is a Total Commander behavior and it's proved to be useful.

I could not find any case where FileSystem::ensureTrailingSlash
is actually needed.

FIXED: [ 282069 ] Bad default in the New Text File dialog
BUG: 282069

Differential Revision: https://phabricator.kde.org/D13671