krusader/Panel/panelfunc.cpp
@@ -456,7 +456,7 @@ void ListPanelFunc::view()
 void ListPanelFunc::viewDlg()
 {
     // ask the user for a url to view
-    QUrl dest = KChooseDir::getFile(i18n("Enter a URL to view:"), panel->virtualPath(), panel->virtualPath());
+    QUrl dest = KChooseDir::getFile(i18n("Enter a URL to view:"), QUrl(panel->getCurrentName()), panel->virtualPath());
     if (dest.isEmpty())
         return ;   // the user canceled
 
@@ -503,7 +503,7 @@ void ListPanelFunc::editNew()
         return;
 
     // ask the user for the filename to edit
-    fileToCreate = KChooseDir::getFile(i18n("Enter the filename to edit:"), panel->virtualPath(), panel->virtualPath());
+    fileToCreate = KChooseDir::getFile(i18n("Enter the filename to edit:"), QUrl(panel->getCurrentName()), panel->virtualPath());
     if(fileToCreate.isEmpty())
         return ;   // the user canceled
 
